Small landing page corrections for mobile devices (title size and icons spacing).

--- a/style.css
+++ b/style.css
@@ -226,13 +226,13 @@ main {
     }
 
     .nav-links2 {
-        width: 50%;    
+        width: 55%;    
     }
 
     .img1, .img2 {
         margin-left: 20px;
-        width: 70%;
-        height: 70%;
+        width: 67%;
+        height: 67%;
     }
 
     .img3 {
